Checkbox Label issue on ie

--- a/src/alto-ui/Form/Switch/Switch.scss
+++ b/src/alto-ui/Form/Switch/Switch.scss
@@ -64,7 +64,7 @@
 
 .Switch__label {
   line-height: 1;
-  flex: 1;
+  flex: 1 1 auto;
 
   &--left {
     margin-left: $spacing-small;
